--- a/src/main/resources/templates/photos/show.html
+++ b/src/main/resources/templates/photos/show.html
@@ -2,6 +2,13 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <th:block th:replace="/fragments/head :: head"></th:block>
 <body>
-<h1>Photo</h1>
+<h1>Photo show</h1>
 </body>
 </html>
+
+
+<!--titolo-->
+<!--descrizione-->
+<!--url-->
+<!--visibile-->
+<!--categorie-->
