--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -2,6 +2,27 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <th:block th:replace="/fragments/head :: head"></th:block>
 <body>
-<h1>Photo</h1>
+<h2>Photo</h2>
+<div class="container">
+    <div class="row">
+        <div class="col-3" th:each="photo : ${photos}">
+            <div class="card" th:object="${photo}">
+                <img class="card-img-top img-fluid" th:alt="*{title}" th:src="*{url}">
+
+                <div class="card-body">
+                    <div class="fs-3" th:text="*{title}">
+                    </div>
+                    <p class="text-secondary fs-5" th:text="*{description}">
+                    </p>
+                    <div>
+                        <div class="btn btn-sm btn-outline-dark" th:each="category : *{categories}"
+                             th:text="${category.name}">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
