Add categories crud

--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -20,7 +20,7 @@
                         </div>
                     </div>
                     <form th:action="@{'/photos/delete/{id}'(id=*{id})}">
-                        <button class="btn btn-danger badge" th:action>
+                        <button class="btn btn-danger badge">
                             Elimina
                         </button>
                     </form>
