--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -4,6 +4,7 @@
     <head>
         <link th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}" th:rel="stylesheet"/>
         <link th:href="@{/webjars/font-awesome/6.3.0/css/all.min.css}" th:rel="stylesheet"/>
+        <link rel="stylesheet" th:href="@{/css/style.css}">
         <script defer th:src="@{/webjars/bootstrap/5.2.3/js/bootstrap.bundle.min.js}"></script>
         <meta charset="UTF-8">
         <title>Title</title>
