--- a/src/main/resources/templates/photos/index.html
+++ b/src/main/resources/templates/photos/index.html
@@ -1,31 +1,60 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <th:block th:replace="/fragments/head :: head"></th:block>
-<body>
-<h2>Photo</h2>
+<body class="bg-secondary text-white">
 <div class="container">
-    <div class="row">
-        <div class="col-3" th:each="photo : ${photos}">
-            <div class="card" th:object="${photo}">
-                <img class="card-img-top img-fluid" th:alt="*{title}" th:src="*{url}">
+    <div class="wrapper py-4 d-flex justify-content-between">
+        <h1>Le mie foto </h1>
+        <div class="wrapper">
+            <a class="btn btn-outline-dark pb-2" th:href="@{/photos/create}" title="Aggiungi una foto">
+                <svg class="bi bi-camera" fill="currentColor" height="16" viewBox="0 0 16 16" width="16"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1v6zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z"/>
+                    <path d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7zM3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
+                </svg>
+            </a>
+        </div>
+    </div>
 
-                <div class="card-body">
-                    <div class="fs-3" th:text="*{title}">
+    <div class="row row-cols-5 gy-5">
+        <div class="col" th:each="photo : ${photos}">
+            <a class="card h-100" th:href="@{'/photos/{id}'(id=*{id})}" th:object="${photo}">
+                <img class="card-img-top img-fluid" th:alt="*{title}" th:src="*{url}">
+                <div class="card-body position-relative">
+                    <div class="btn p-2 rounded-circle badge position-absolute m-2 top-0 end-0"
+                         th:classappend="*{visibility} ? 'btn-success' : 'btn-danger'"
+                         th:title="*{visibility} ? 'Visibile' : 'Non visibile'">
+                    </div>
+                    <div class="fs-4 text-dark  " th:text="*{title}">
                     </div>
                     <p class="text-secondary fs-5" th:text="*{description}">
                     </p>
-                    <div>
+                    <div class="mb-5">
                         <div class="btn btn-sm btn-outline-dark" th:each="category : *{categories}"
                              th:text="${category.name}">
                         </div>
                     </div>
+                    <form th:action="@{'/photos/edit/{id}'(id=*{id})}">
+                        <button class="btn btn-dark badge position-absolute m-2 bottom-0 start-0"
+                                title="Modifica">
+                            <svg class="bi bi-gear" fill="currentColor" height="16" viewBox="0 0 16 16"
+                                 width="16" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
+                                <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
+                            </svg>
+                        </button>
+                    </form>
                     <form th:action="@{'/photos/delete/{id}'(id=*{id})}">
-                        <button class="btn btn-danger badge">
-                            Elimina
+                        <button class="btn btn-danger badge position-absolute m-2 bottom-0 end-0" title="Elimina">
+                            <svg class="bi bi-trash" fill="currentColor" height="16" viewBox="0 0 16 16"
+                                 width="16" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z"/>
+                                <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z"/>
+                            </svg>
                         </button>
                     </form>
                 </div>
-            </div>
+            </a>
         </div>
     </div>
 </div>
