--- a/front-end/src/assets/scss/style.scss
+++ b/front-end/src/assets/scss/style.scss
@@ -1,11 +1,12 @@
+@use './partials/variables.scss' as *;
 @import "/node_modules/bootstrap/scss/bootstrap";
-@use '../scss/partials/variables.scss' as *;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
 img {
     max-width: 100%;
-}
-
-body {
-    background-color: $dark;
-    color: white;
 }
