--- a/src/main/resources/templates/error/4xx.html
+++ b/src/main/resources/templates/error/4xx.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <th:block th:replace="/fragments/head :: head"></th:block>
-<body>
+<body class="vh-100">
 
 Errore di tipo 4XX
 <div th:if="${exception}">
