--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" th:href="@{/css/style.css}">
         <script defer th:src="@{/webjars/bootstrap/5.2.3/js/bootstrap.bundle.min.js}"></script>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Pannello Foto</title>
     </head>
 </th:block>
 </html>
