--- a/src/main/resources/templates/messages/index.html
+++ b/src/main/resources/templates/messages/index.html
@@ -2,7 +2,8 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <th:block th:replace="/fragments/head :: head"></th:block>
-<body class="bg-secondary">
+<body class="vh-100">
+<th:block th:replace="/fragments/navbar :: navbar(${keyword})"></th:block>
 
 <div class="container my-5">
     <th:block th:if="${messages.size()}">
